--- a/mcp-server-deepwiki-gpt/package.json
+++ b/mcp-server-deepwiki-gpt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remote-mcp-github-oauth",
+  "name": "mcp-server-deepwiki-gpt",
   "version": "0.0.1",
   "private": true,
   "scripts": {
